lib/queue-msg-macro/tests/unit-struct.stderr
error: Only supports Named and Unnamed fields
 --> tests/unit-struct.rs:3:1
  |
3 | #[msg_struct]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `msg_struct` (in Nightly builds, run with -Z macro-backtrace for more info)
