lib/queue-msg-macro/tests/unit-struct.rs
use queue_msg_macro::msg_struct;

#[msg_struct]
struct UnitStruct;

fn main() {}
